 * SWFUpload Revision 7.0 by Jacob Roberts, Sept 2007, linebyline.blogspot.com

 * --------- Revision 7.0 beta 2 -----------
 * = Changed ERROR_CODE_FILE_NOT_FOUND to ERROR_CODE_FILE_ID_NOT_FOUND
 * + Grouped the error code constants in objects for queue errors and upload errors.
 * + Added an UPLOAD_STOPPED error code.
 * = Changed Event calling method (using Timer) in Flash.  Timer is no longer called
 *    instead setTimeout is called in JavaScript.  This includes a change to the
 *    JavaSCript design so the Event methods are not directly overridden but stored
 *    internally and called if defined (with a setTimeout).  This is an effort
 *    be more compatible with the current Flash Player on Linux
 * = Changed the parameter order for the fileQueueError and uploadError events so the fileObj is first, like other events.
 * + Added an empty JavaScript object (customSettings) where users can store settings associated with the instance.
 * + Worked around an escaping bug in the ExternalInterface library by escaping all backslashes in out-going strings.
 * = Updated all the demos.
 
 * --------- Revision 7.0 beta 1 -----------
 * = Redesigned the Event Chain
 * - Removed much of the queue concepts
 * - Removed the fileValidation events. This can be done in the new uploadStart event
 * - Removed beginUploadOnQueue feature. This can be done in the new dialogComplete event.
 * - Removed use_server_data. This is now always on.
 * + Added functions for retrieving queue stats (number of files uploaded, queued, errors, etc)
 * + Added a file status property to the FileObject. This indicates, uploaded, error, waiting.
 * + Added a single file browser (user cannot select multiple files)
 * + Fixed bug (hopefully) caused if Flash call to JavaScript and in the callback JavaSCript calls to Flash
 *    This only place this does not apply is to uploadStart.  If you call in to Flash from uploadStart use a setTimeout to do it.

 * --------- Revision 6.2 -----------